--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@ and open the template in the editor.
         	<hgroup>
            	 <h1>Nuevo LOLtroen DeLOLrean </h1>
              <h2>El nuevo coche Impulsado con HTML5</h2>
-             <h3>Menos jasolina mas HTML5 </h3>
+             <h3>Menos Gasolina mas HTML5 </h3>
              </hgroup>
         </header>
         <section>
