--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,8 @@ and open the template in the editor.
         </header>
         <section>
             <article id="historia">
-            <p>PRÁCTICA DE AUTOEVALUACIÓN
+            <p><h1>Web De Quincho</h1>
+            PRÁCTICA DE AUTOEVALUACIÓN
             5.4 Considere la siguiente llamada a un método:
             int a = 3;
             int b = 8;
@@ -52,8 +53,8 @@ and open the template in the editor.
             exista. Por lo general nosotros nunca los invocamos.
             
             </article>
-            <figure>
-                <img src="web.JPG"/>
+            <figure id="coche">
+                <img src="coche.JPG"/>
                 <figcaption>
                     <h2>LOLtroen DeLOLrean</h2>
                     <ul>
